# search-engine

./: .gitignore  README.md  unique_titles_sorted
backend/: main.py  movie_searcher.py  setup.cfg
frontend/: .eslintcache  package-lock.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/forms/: LoginForm.js
frontend/src/components/layout/: MainNavigation.js
frontend/src/components/pages/: HistoryListPage.js  SearchListPage.js
frontend/src/components/requestComponents/: HistoryList.js  SearchBox.js  SearchItem.js  SearchItem.module.css  SearchResult.js  SearchResult.module.css
frontend/src/components/simpleTodos/: HistoryList.js  SearchBox.js  SearchItem.js
frontend/src/store/: history.js  index.js  token.js
