[metadata]
name = se_backend
version = 0.0.1

[options]
install_requires =
    wheel==0.37.1

    scipy==1.7.1
    numpy==1.20.2
    pandas==1.3.1


    torch==1.10.2
    torchvision==0.11.3
    torchaudio==0.10.2




    mypy==0.910
    flake8==3.9.2
    pytest==6.2.5
    pytest-timeout==1.4.2
    pytest-mock==3.6.1
    psutil==5.8.0

    fastapi[all]
    sentence-transformers
    hnswlib
    

packages = find:
dependency_links = 
    https://download.pytorch.org/whl/torch_stable.html
    https://data.pyg.org/whl/torch-1.10.0+cpu.html

